fixed bugs in the backend, and added two endpooints: GETProducts/employee/{id} and GET Client/employee/{id}
